--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<main>
-		<h1>
-			Welcome to Accio Jobs!
-		</h1>
+		<h1>Welcome to Accio Jobs!</h1>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
